--- a/package.json
+++ b/package.json
@@ -5,30 +5,31 @@
   "author": "Kiwamu ISHII",
   "dependencies": {
     "bulma": "^0.7.5",
-    "gatsby": "^2.13.41",
-    "gatsby-image": "^2.2.7",
-    "gatsby-plugin-netlify": "^2.1.3",
+    "gatsby": "^2.13.57",
+    "gatsby-image": "^2.2.8",
+    "gatsby-plugin-netlify": "^2.1.4",
     "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-plugin-purgecss": "^4.0.0",
-    "gatsby-plugin-react-helmet": "^3.1.2",
-    "gatsby-plugin-sass": "^2.1.3",
-    "gatsby-plugin-sharp": "^2.2.9",
-    "gatsby-remark-copy-linked-files": "^2.1.3",
-    "gatsby-remark-images": "^3.1.7",
-    "gatsby-remark-relative-images": "^0.2.2",
-    "gatsby-source-filesystem": "^2.1.6",
-    "gatsby-transformer-remark": "^2.6.9",
-    "gatsby-transformer-sharp": "^2.2.4",
+    "gatsby-plugin-react-helmet": "^3.1.3",
+    "gatsby-plugin-sass": "^2.1.6",
+    "gatsby-plugin-sharp": "^2.2.11",
+    "gatsby-remark-copy-linked-files": "^2.1.5",
+    "gatsby-remark-images": "^3.1.8",
+    "gatsby-remark-relative-images": "^0.2.3",
+    "gatsby-source-filesystem": "^2.1.9",
+    "gatsby-transformer-remark": "^2.6.12",
+    "gatsby-transformer-sharp": "^2.2.6",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.5",
     "netlify-cms-app": "^2.9.7",
+    "netlify-cms-lib-util": "^2.3.3",
     "netlify-cms-media-library-cloudinary": "^1.3.3",
     "netlify-cms-media-library-uploadcare": "^0.5.3",
     "node-sass": "^4.12.0",
     "parcel-bundler": "^1.12.3",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "uuid": "^3.3.2"
   },
