--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "build": "run-p build:**",
     "develop": "npm run clean && gatsby develop",
     "serve": "gatsby serve",
-    "test" : "cross-env NODE_ENV=test jest --passWithNoTests",
-    "lint": "tsc --noEmit && prettier 'src/**/*.{ts,tsx,scss,md}' && eslint --ext js,jsx,ts,tsx,graphql --ignore-path .gitignore .",
-    "lint:md": "remark .",
-    "format": "prettier --write 'src/**/*.{ts,tsx,scss,md}' && eslint --ext jsx,ts,tsx,graphql --ignore-path .gitignore . --fix && stylelint --fix 'src/**/*.scss' ",
+    "test": "cross-env NODE_ENV=test jest --passWithNoTests",
+    "lint": "tsc --noEmit && prettier 'src/**/*.{js,jsx,ts,tsx,scss,md}' && eslint --ext js,jsx,ts,tsx,graphql --ignore-path .gitignore . && stylelint 'src/**/*.{css,scss}'",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,scss,md}' && eslint --ext js,jsx,ts,tsx,graphql --ignore-path .gitignore . --fix && stylelint --fix 'src/**/*.{css,scss}'",
     "graphql-types": "graphql-codegen",
     "precommit": "lint-staged",
     "postcommit": "git update-index --again",
@@ -29,14 +28,14 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.3.0",
     "bulma": "^0.7.5",
     "bulma-addons": "^0.1.12",
     "bulma-extensions": "^6.2.7",
     "bulma-helpers": "^0.3.8",
     "bulma-pro": "^0.1.8",
     "bulmaswatch": "^0.7.2",
-    "gatsby": "^2.13.58",
+    "change-case": "^3.1.0",
+    "gatsby": "^2.13.59",
     "gatsby-image": "^2.2.8",
     "gatsby-paginate": "^1.1.1",
     "gatsby-plugin-feed": "^2.3.6",
@@ -48,7 +47,7 @@
     "gatsby-plugin-offline": "^2.2.5",
     "gatsby-plugin-purgecss": "^4.0.0",
     "gatsby-plugin-react-helmet": "^3.1.3",
-    "gatsby-plugin-sass": "^2.1.7",
+    "gatsby-plugin-sass": "^2.1.8",
     "gatsby-plugin-sharp": "^2.2.11",
     "gatsby-plugin-sitemap": "^2.2.6",
     "gatsby-plugin-typescript": "^2.1.2",
@@ -58,8 +57,6 @@
     "gatsby-source-filesystem": "^2.1.9",
     "gatsby-transformer-remark": "^2.6.13",
     "gatsby-transformer-sharp": "^2.2.6",
-    "lodash": "^4.17.15",
-    "lodash-webpack-plugin": "^0.11.5",
     "netlify-cms-app": "^2.9.7",
     "netlify-cms-lib-util": "^2.3.3",
     "netlify-cms-media-library-cloudinary": "^1.3.3",
@@ -70,7 +67,6 @@
     "prop-types": "^15.7.2",
     "rbx": "^2.2.0",
     "react": "^16.9.0",
-    "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "react-share": "^3.0.0",
@@ -128,7 +124,6 @@
     "babel-plugin-emotion": "^10.0.15",
     "babel-plugin-macros": "^2.6.1",
     "babel-preset-gatsby": "^0.2.8",
-    "change-case": "^3.1.0",
     "cross-env": "^5.2.0",
     "dotenv": "8.0.0",
     "dotenv-expand": "5.1.0",
@@ -157,6 +152,7 @@
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "^0.3.1",
     "lint-staged": "^9.2.1",
+    "lodash.ismatch": "^4.4.0",
     "netlify-lambda": "^1.5.1",
     "node-ts": "^5.0.1",
     "npm-run-all": "^4.1.5",
@@ -165,9 +161,6 @@
     "prettier-eslint-cli": "^5.0.0",
     "prettier-stylelint": "^0.4.2",
     "react-test-renderer": "^16.9.0",
-    "remark-cli": "^7.0.0",
-    "remark-lint": "^6.0.5",
-    "remark-preset-lint-recommended": "^3.0.3",
     "stylelint": "^10.1.0",
     "stylelint-config-css-modules": "^1.4.0",
     "stylelint-config-prettier": "^5.2.0",
