--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "scripts": {
     "clean": "gatsby clean",
     "start:app": "npm run develop",
-    "start:lambda": "netlify-lambda serve src/lambda",
+    "start:lambda": "cross-env NODE_ENV=test netlify-lambda serve src/lambda",
     "start": "run-p start:**",
     "build:app": "npm run clean && gatsby build",
-    "build:lambda": "netlify-lambda build src/lambda",
+    "build:lambda": "cross-env NODE_ENV=test netlify-lambda build src/lambda",
     "build": "run-p build:**",
     "develop": "npm run clean && gatsby develop",
     "serve": "gatsby serve",
@@ -105,7 +105,7 @@
     "@testing-library/react": "^9.1.0",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/jest": "24.0.17",
+    "@types/jest": "^24.0.17",
     "@types/lingui__core": "^2.7.0",
     "@types/lingui__macro": "^2.7.3",
     "@types/lingui__react": "^2.8.0",
