--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   publish = "public"
   command = "gatsby build"
+  functions = "lambda"
 [build.environment]
   YARN_VERSION = "1.16.0"
   YARN_FLAGS = "--no-ignore-optional"
